
TOOLS
    Backported: imscp-get-master-sql-user-pwd.pl script from 1.6.x branch (Script that make possible to retrieve i-MSCP master SQL user and password)

YOUTRACK
    IP-1745 Rsyslog log rotation failure -- Initctl command (Upstart) doesn't know the 'rotate' action -- Ubuntu 14.04/Trusty Thar
    IP-1785 Exception in circular email feature (admin and reseller interfaces)
    IP-1786 Customer assignment (to reseller) not showing all clients
    IP-1787 Typo in external mail feature activation
    IP-1751 CLIENT_DOMAIN_ALT_URLS reseted

------------------------------------------------------------------------------------------------------------------------
1.5.3
------------------------------------------------------------------------------------------------------------------------

2018-05-16: Laurent Declercq
    RELEASE i-MSCP 1.5.3

BACKEND
    Backport: Fix for #IP-1758 (Could not remove HTTPD log directory -- The immutable bit is removed too late) from 1.6.x branch
    Fixed: Couldn't restore backup archive - Can't locate object method "selectall_array" via package "DBI::db" (restore backup feature)
    Fixed: Default PHP INI values (PHP Editor)

DATABASE
    Backport: Fix for #IP-1742 (i-MSCP upgrade error - Unknown 'mail_user' database table in database update r254) from 1.6.x branch

FRONTEND
    Backport: Fix for #IP-1749 (User profile fields validation too strict from 1.6.x branch)
    Cosmetic: Remove borders in table header/footer (layout)
    Fixed: Couldn't generate self-signed SSL certificate - Couldn't write in temporary SSL configuration file
    Fixed: Couldn't access support section when logged as reseller
    Fixed: Couldn't update customer password when logged in as administrator or reseller
    Fixed: IDE inspections (PhpStorm)
    Fixed: Localization routing
    Fixed: Possible double POST request submission in restore backup interface
    Fixed: Unhandled 'torestore' status leading to cosmetic issues in GUI when a domain is being restored