@@ -34,10 +34,11 @@ TOOLS
 
 YOUTRACK
     IP-1745 Rsyslog log rotation failure -- Initctl command (Upstart) doesn't know the 'rotate' action -- Ubuntu 14.04/Trusty Thar
+    IP-1751 CLIENT_DOMAIN_ALT_URLS reseted
     IP-1785 Exception in circular email feature (admin and reseller interfaces)
     IP-1786 Customer assignment (to reseller) not showing all clients
     IP-1787 Typo in external mail feature activation
-    IP-1751 CLIENT_DOMAIN_ALT_URLS reseted
+    IP-1791 Error message when calculating disk quota - Cannot start new SQL transaction on an automatic reconnect
 
 ------------------------------------------------------------------------------------------------------------------------
 1.5.3
